force-app/main/default/objects/KDCE_GCAuditLog__c/KDCE_GCAuditLog__c.object-meta.xml
<CustomObject>
    <description>GC Download Recordings Audit Log</description>
    <label>GC Audit Log</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{00000}</displayFormat>
        <label>GC Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GC Audit Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>