force-app/main/default/objects/KDCE_GCAuditLog__c/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <description>[KDCE] Conversation Id</description>
    <label>Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>