force-app/main/default/objects/KDCE_GCAuditLog__c/fields/LogDateTime__c.field-meta.xml
<CustomField>
    <fullName>LogDateTime__c</fullName>
    <description>[KDCE] Log Date Time</description>
    <label>Log DateTime</label>
    <type>DateTime</type>
</CustomField>