force-app/main/default/objects/KDCE_GCAuditLog__c/fields/RecordingId__c.field-meta.xml
<CustomField>
    <fullName>RecordingId__c</fullName>
    <description>[KDCE] Recording Id</description>
    <label>Recording Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>