force-app/main/default/objects/KDCE_GCAuditLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GC_Audit_Log</relationshipName>
    <type>Lookup</type>
</CustomField>