force-app/main/default/objects/KDCE_GCAuditLog__c/fields/UserIP__c.field-meta.xml
<CustomField>
    <fullName>UserIP__c</fullName>
    <description>[KDCE] User IP</description>
    <label>User IP</label>
    <type>TextArea</type>
</CustomField>