force-app/main/default/objects/KDCE_GCAuditLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>UserIP__c</columns>
    <columns>LogDateTime__c</columns>
    <columns>RecordingId__c</columns>
    <columns>ConversationId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>